# rust-wordgen-001

./: .gitignore  Cargo.toml
src/: builder.rs  generator.rs  lib.rs  main.rs  parameters.rs
