[package]
name = "rust-wordgen-001"
version = "0.1.0"
authors = ["sladecek <ladislav,sladecek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
clap = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"